@@ -2,6 +2,9 @@ SubVersion: $Id$
 
 Log of changes:	tilp (cables, calcs, files, ticonv)
 
+- 06/08/2006, version 0.21 (0.1.3, 0.2.4, 0.2.3, 0.0.5): roms
+	- sending app without dirlist make TiLP crash: fixed
+
 - 18/07/2006, version 0.20 (0.1.3, 0.2.4, 0.2.2, 0.0.5): roms
 	- use ticalcs_probe instead of the previous code (easier & clearer)
 	- added Seamonkey to the browser list, suggest Firefox instead of the obsolete Mozilla Suite (kevin)
